--- a/src/Resources/templates/badge/badge.success.html.twig
+++ b/src/Resources/templates/badge/badge.success.html.twig
@@ -10,6 +10,9 @@
 {# ------------------- DevBrain Component : Badge - Attr -------------------- #}
 {# -------------------------------------------------------------------------- #}
 
+{# Badge Class #}
+{% set _class = 'badge-success ' ~ _class %}
+
 
 
 {# ------------------ DevBrain Component : Badge - Content ------------------ #}
