--- a/documentation/index.html.twig
+++ b/documentation/index.html.twig
@@ -34,7 +34,7 @@
         
         <div class="container-fluid">
             <div class="grid gap-2">
-                <div class="column-2">
+                <div class="column-12 column-laptop-2">
                     
                     <h6>Layout</h6>
                     {% component 'menu' with {
@@ -57,7 +57,7 @@
                     } %}
 
                 </div>
-                <div class="column-8">
+                <div class="column-12 column-laptop-8">
                 {% if item is not empty  %}
                     
                     <header class="page-header">
