--- a/documentation/sources/button/pallet.twig
+++ b/documentation/sources/button/pallet.twig
@@ -1,4 +1,4 @@
-{% for color in ['success','danger','warning','info','primary','secondary','light','dark','muted','custom-color'] %}
+{% for color in ['success','danger','warning','info','primary','secondary','light','dark','muted','custom-color' , 'truc'] %}
     <div class="grid">
         <div class="column-3">
             <code>.button-{{color}}</code>
