--- a/documentation/sources/cookie-box/main.twig
+++ b/documentation/sources/cookie-box/main.twig
@@ -1,7 +1,7 @@
 {% component 'cookie-box' with {
     type: 'banner',
     backdrop: true,
-    customize: false,
+    customize: true,
 
     header: 'Cookie Consent Header Text',
     header_template: '@DevbrainUiDoc/sources/cookie-box/template-header.html.twig',
