--- a/sass/abstracts/functions/_collection.scss
+++ b/sass/abstracts/functions/_collection.scss
@@ -45,3 +45,55 @@
 
   @return $result;
 }
+
+
+@function empty($collection) {
+  @return length($collection) == 0;
+}
+@function notEmpty($collection) {
+  @return length($collection) != 0;
+}
+
+
+///
+/// Return true if a key is defined in a collection
+/// @example collection.keyExists($collection, $key)
+/// =============================================
+/// 
+/// @param {Map} $collection
+/// @param {String} $key you want to search
+/// @return {Boolean}
+///  
+@function keyExists($collection, $key) {
+  $length: length($collection);
+
+  @for $i from 1 through $length {
+    @if nth($collection, $i) == $key {
+      @return true;
+    }
+  }
+
+  @return false;
+}
+
+/// 
+/// Unset an item form a collection
+/// @example collection.unset($collection, $key)
+/// =============================================
+/// 
+/// @param {Map} $collection
+/// @param {String} $key to unset
+/// @return {Map} modified c$collection
+///  
+@function unset($collection, $key) 
+{
+  $output: ();
+
+  @each $map-key, $value in $collection {
+    @if $map-key != $key {
+      $output: map-merge($output, ($map-key: $value));
+    }
+  }
+
+  @return $output;
+}
