--- a/documentation/index.html.twig
+++ b/documentation/index.html.twig
@@ -60,24 +60,44 @@
                 <div class="column-12 column-laptop-8">
                 {% if item is not empty  %}
                     
+                    {# Additional Style #}
+                    {% if item.style is defined %}
+                    <style>
+                        {% include "@DevbrainUiDoc/sources/" ~ item.style %}
+                    </style>
+                    {% endif %}
+
+
+
                     <header class="page-header">
-                        <h2>{{ item.name }}</h2>
+                        <h1>{{ item.name }}</h1>
                         <p>{{ item.description|raw }}</p>
                     </header>
 
 
+
+                    {% include "@DevbrainUiDoc/blocks.html.twig" with {
+                        data: item
+                    } %}
+
+
+
+
+
+
+
                     {# Twig Source #}
-                    {% if item.twig.source is defined %}
+                    {# {% if item.twig.source is defined %}
                     <hr>
                     {% include "@DevbrainUiDoc/sources/" ~ item.twig.source %}
                     <hr>
-                    {% endif %}
+                    {% endif %} #}
 
 
 
 
                     {# Install / Imports #}
-                    <section>
+                    {# <section>
                         <h3>Imports</h3>
                         <dl class="doc_properties">
                         {% if item.sass.import is defined and item.sass.import is not empty %}
@@ -89,7 +109,7 @@
                             <dd><code>import {{ item.javascript.import }} from 'vendor/devbraincode/devbrain-ui/scripts/components/{{ item.javascript.import }}';</code></dd>
                         {% endif %}
                         </dl>
-                    </section>
+                    </section> #}
 
 
 
