--- a/documentation/sources/layout/breakpoints/list.twig
+++ b/documentation/sources/layout/breakpoints/list.twig
@@ -1,4 +1,7 @@
 <div class="grid">
+    <div class="column-2"><strong>Name</strong></div>
+    <div class="column-10"><strong>Breakpoint width</strong></div>
+
     <div class="column-2"><strong>phone</strong></div>
     <div class="column-10">576px</div>
     
