--- a/documentation/sources/layout/grid/import.scss
+++ b/documentation/sources/layout/grid/import.scss
@@ -1,1 +1,2 @@
+@import './vendor/devbraincode/devbrain-ui/sass/abstracts/variables/grid';
 @import './vendor/devbraincode/devbrain-ui/sass/base/grid';
