--- a/sass/utilities/_spacing.scss
+++ b/sass/utilities/_spacing.scss
@@ -4,6 +4,9 @@
 // *
 // ************************************************************************** //
 
+
+@import './../abstracts/variables/breakpoints';
+
 $properties: (
     m: margin,
     p: padding,
