--- a/documentation/sources/layout/containers/import.scss
+++ b/documentation/sources/layout/containers/import.scss
@@ -1,1 +1,2 @@
+@import './vendor/devbraincode/devbrain-ui/sass/abstracts/variables/breakpoints';
 @import './vendor/devbraincode/devbrain-ui/sass/base/container';
