--- a/documentation/sources/layout/grid/column-breaking.twig
+++ b/documentation/sources/layout/grid/column-breaking.twig
@@ -1,9 +1,12 @@
 <div class="grid">
-    <div class="column-5 column-break"> column-5 column-break </div>
-    <div class="column-4"> 
-        column-4 <br>
-        Passage à la ligne
-    </div>
+    <div class="column-5"> column-5 </div>
+    <div class="column-break"></div>
+    <div class="column-4"> column-4 </div>
     <div class="column-6"> column-6 </div>
-    <div class="column-6"> column-6 </div>
+</div>
+<div class="grid">
+    <div class="column"> column </div>
+    <div class="column-break"></div>
+    <div class="column"> column </div>
+    <div class="column"> column </div>
 </div>
