--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -1,14 +1,18 @@
 // ******************************* DevBrain UI ****************************** //
-// *                                                                        * //
-// * Colors definition.                                                     * //
-// *                                                                        * //
+// *
+// *    Colors definition.
+// *
 // ************************************************************************** //
 
-$pallet: () !default;
+@use './../functions/collection';
+@use './../functions/color';
+
+
+/// Defaults colors
+/// =============================================
 
 /// Black & White & Gray
-/// =============================================
-///
+/// -------------------------
 $black                  : #111111 !default; // #050505 343a40 !default;
 $white                  : #ffFFFf !default;
 $gray-100               : #f8f9fa !default;
@@ -23,8 +27,7 @@ $gray-900               : #212529 !default;
 
 
 /// Bootstrap base colors
-/// =============================================
-///
+/// -------------------------
 $blue                   : #0d6efd !default;
 $indigo                 : #6610f2 !default;
 $purple                 : #6f42c1 !default;
@@ -37,15 +40,63 @@ $teal                   : #20c997 !default;
 $cyan                   : #0dcaf0 !default;
 
 
-/// Pallet
+/// Default colors collection
+/// -------------------------
+$colors: (
+    'black'   : $black,
+    'white'   : $white,
+    'gray-100': $gray-100,
+    'gray-200': $gray-200,
+    'gray-300': $gray-300,
+    'gray-400': $gray-400,
+    'gray-500': $gray-500,
+    'gray-600': $gray-600,
+    'gray-700': $gray-700,
+    'gray-800': $gray-800,
+    'gray-900': $gray-900,
+
+    'blue'    : $blue,
+    'indigo'  : $indigo,
+    'purple'  : $purple,
+    'pink'    : $pink,
+    'red'     : $red,
+    'orange'  : $orange,
+    'yellow'  : $yellow,
+    'green'   : $green,
+    'teal'    : $teal,
+    'cyan'    : $cyan,
+);
+
+
+
+/// Additional Colors
 /// =============================================
-///
-$success                : $green !default;
-$danger                 : $red !default;
-$warning                : $orange !default;
-$info                   : $cyan !default;
-$primary                : $blue !default;
-$secondary              : $gray-600 !default;
-$light                  : $white !default;
-$dark                   : $black !default;
-$muted                  : $gray-500 !default;
+
+/// Add customs colors to the colors
+/// -----
+/// $additional-colors: ( 'my-color': purple );
+$additional-colors: () !default;
+
+@if collection.notEmpty($additional-colors) {
+    @each $key, $value in $additional-colors {
+        $colors: map-merge($colors, ($key: $value));
+    }
+}
+
+
+
+/// Useless Colors
+/// =============================================
+
+/// Remove from colors
+/// -----
+/// $useless-colors: ('success');
+$useless-colors: () !default;
+
+@if collection.notEmpty($useless-colors) {
+    @each $key, $value in $colors {
+        @if collection.keyExists($useless-colors, $key) {
+            $colors: collection.unset($colors, $key);
+        }
+    }
+}
