--- a/sass/base/_containers.scss
+++ b/sass/base/_containers.scss
@@ -1,59 +1,53 @@
 // ******************************* DevBrain UI ****************************** //
 // *
-// *    Define the wrapper.
-// *
-// ************************************************************************** //
-// *
-// *    <div class="container">...</div>
-// *    <div class="container-fluid">...</div>
-// *    <div class="container-sm">...</div>
-// *    <div class="container-md">...</div>
-// *    <div class="container-lg">...</div>
-// *    <div class="container-xl">...</div>
-// *    <div class="container-xxl">...</div>
-// *    <div class="container-xxxl">...</div>
+// *    Containers builder
 // *
 // ************************************************************************** //
 
+@use './../abstracts/mixins/sizes';
+@use './../abstracts/mixins/banner';
+@use './../abstracts/mixins/spaces';
+@use './../abstracts/mixins/position';
 @use './../abstracts/functions/collection';
+
+@include banner.header('Containers');
 
 
 /// Containers Base 
 /// =============================================
-///
-/// cbl : containers base list
-/// cbl : containers base selector
-/// .container, 
-/// .container-fluid, 
-/// .container-phone, 
-/// .container-tablet { ... }
+/// .container, .container-xx { ... }
 
-$cbl: (container, container-fluid);
-$cbs: '';
+$_selectors_str : '';
+$_selectors_list: ('container', 'container-fluid');
 
+// Build the list of containers selectors
 @each $key, $container in $containers {
-  $cbl: append($cbl, container-#{$key});
+  $_selectors_list: append($_selectors_list, container-#{$key});
 }
-@each $c in $cbl {
-  $cbs: $cbs + '.#{$c}, ';
-}
-$cbs: unquote(str-slice($cbs, 1, -3));
 
-#{$cbs} {
-  position: relative;
+// Build the string of selectors
+@each $_selector in $_selectors_list {
+  $_selectors_str: $_selectors_str + '.#{$_selector}, ';
+}
+$_selectors_str: unquote(str-slice($_selectors_str, 1, -3));
+
+// Set styles definition
+#{$_selectors_str} {
+  $padding: map-get($spacers, 3);
+
+  @include position.relative;
+  @include sizes.width(100%);
+  @include spaces.padding(null, $padding, null, $padding);
+  @include spaces.margin(null, auto, null, auto);
+
   display: block;
-  width: 100%;
-  padding-right: map-get($spacers, 3);
-  padding-left: map-get($spacers, 3);
-  margin-right: auto;
-  margin-left: auto;
   z-index: 1;
 }
 
 
-/// Set .container-xx width
+
+/// Set containers max width
 /// =============================================
-///
 /// .container-phone { ... }
 /// .container-tablet { ... }
 
@@ -65,9 +59,8 @@ $cbs: unquote(str-slice($cbs, 1, -3));
 
 
 
-/// Responsive containers
+/// Make responsive .container
 /// =============================================
-///
 /// @media (min-width: ...px) {.container { ... }}
 
 @each $size, $breakpoint in $breakpoints {
