--- a/sass/base/_grid.scss
+++ b/sass/base/_grid.scss
@@ -1,61 +1,59 @@
 // ******************************* DevBrain UI ****************************** //
 // *
-// *    Grid layout.
+// *    Grid builder
 // *
 // ************************************************************************** //
 
-
-// .grid
-// .grid-start
-// .grid-center
-// .grid-end
-
-// .grid .gap-N
-// .grid .gap-x-N
-// .grid .gap-y-N
-
-// .column
-// .column-N
-// .column-N .offset-N
-
-
 @use "sass:math";
 @use './../abstracts/mixins/flex';
+@use './../abstracts/mixins/clear';
+@use './../abstracts/mixins/banner';
+@use './../abstracts/mixins/spaces';
+
+@include banner.header('Grid & Columns');
+
+
+/// Grid utils
+/// =============================================
 
 @mixin make-column($columns) 
 {
-    flex: 0 0 percentage(math.div($columns, $grid-columns));
-    max-width: percentage(math.div($columns, $grid-columns));
+    flex: 0 0 percentage(math.div($columns, $grid-divisions));
+    max-width: percentage(math.div($columns, $grid-divisions));
 }
 @mixin make-break($columns) 
 {
-    // flex: 0 0 percentage(math.div($columns, $grid-columns));
-    margin-right: 100% - (percentage(math.div($columns, $grid-columns)));
+    // flex: 0 0 percentage(math.div($columns, $grid-divisions));
+    margin-right: 100% - (percentage(math.div($columns, $grid-divisions)));
 }
 @mixin make-offset($columns) 
 {
-  margin-left: percentage(math.div($columns, $grid-columns));
+  margin-left: percentage(math.div($columns, $grid-divisions));
 }
 
 
 
-/// Grid 
+/// The Grid 
 /// =============================================
-///
+@include banner.section('The grid');
+
+// Set .grid styles definition
 .grid {
     @include flex.row;
+    @include clear.both;
     flex-wrap: wrap;
 
-    &:after {
-        content: "";
-        display: table;
-        clear: both;
+    // Make grid direct children as wrapped
+    & > * {
+        flex-shrink: 0;
+        width: 100%;
+        max-width: 100%;
     }
 
-    @each $pos in (center, start, end)
-    {
-        &-#{$pos} {
-            justify-content: #{$pos} !important;
+    // Grid alignment
+    @each $_position in (center, start, end) {
+        &-#{$_position} {
+            justify-content: #{$_position} !important;
         }
     }
 }
@@ -64,77 +62,67 @@
 
 /// Gaps
 /// =============================================
-///
-.gap-0 [class^="column"]{
-    padding: map-get($spacers, 0);
-}
+@include banner.section('Grid gaps');
 
 @each $i, $spacer in $spacers 
 {
+    $margin: calc(-1 * $spacer);
+    $padding: $spacer;
+
+    // Padding gap for the Grid
     .grid.gap-#{$i}
     {
-        margin-right: calc(-1 * $spacer);
-        margin-left: calc(-1 * $spacer);
+        @include spaces.margin(null, $margin, null, $margin);
     }
 
+    // (All) Padding gap for thr grid Columns
     .gap-#{$i} [class^="column"]
     {
-        padding: $spacer;
+        @include spaces.padding($padding, $padding, $padding, $padding);
     }
+    // (Left & right) Padding gap for thr grid Columns
     .gap-x-#{$i} [class^="column"]{
-        padding: map-get($spacers, 0) $spacer;
+        @include spaces.padding(0, $padding, 0, $padding);
     }
+    // (Top & Bottom) Padding gap for thr grid Columns
     .gap-y-#{$i} [class^="column"]{
-        padding: $spacer map-get($spacers, 0);
+        @include spaces.padding($padding, 0, $padding, 0);
     }
 }
 
-/// Column
-/// =============================================
-///
-.grid > * {
-    flex-shrink: 0;
-    width: 100%;
-    max-width: 100%;
-}
 
+
+/// Columns
+/// =============================================
+@include banner.section('The grid columns');
+
+// Set .column & .column-x styles definition
 .column {
     flex: 1 0 0%;
-}
 
+    // .column-break
+    &-break {
+        flex-basis: 100%;
+        height: 0;
+        margin: 0 !important;
+        padding: 0 !important;
+    }
 
-// [class^=column].break {
-//     border: 3px solid red;
-//     // margin-right: 100%; 
-// }
-
-@for $i from 1 through $grid-columns {
-    // :root {
-    //     --column-#{$i}-width: #{percentage(math.div($i, $grid-columns))};
-    // }
-
-    .column-#{$i} {
-        // flex: 0 0 var(--column-#{$i}-width);
-        // max-width: var(--column-#{$i}-width);
-        @include make-column($i);
-        
-        &.column-break {
-            @include make-break($i);
+    // column-x
+    @for $i from 1 through $grid-divisions {
+        &-#{$i} {
+            @include make-column($i);
         }
     }
-}
 
-@each $size, $breakpoint in $breakpoints 
-{
-    @if $breakpoint > 0 
-    {
-        @media (min-width: map-get($breakpoints, $size))
-        {
-            @for $i from 1 through $grid-columns 
-            {
-                .column-#{$size}-#{$i} {
-                    // flex: 0 0 auto;
-                    @include make-column($i);
+    // Responsive columns
+    @each $size, $breakpoint in $breakpoints {
+        @if $breakpoint > 0 {
+            @media (min-width: map-get($breakpoints, $size)) {
+                @for $i from 1 through $grid-divisions {
+                    &-#{$size}-#{$i} {
+                        @include make-column($i);
+                    }
                 }
             }
         }
@@ -142,24 +130,28 @@
 }
 
 
-/// Offset
+
+/// Offsets
 /// =============================================
-///
-@for $i from 1 through $grid-columns {
-    .offset-#{$i} {
-        @include make-offset($i);
+@include banner.section('The grid offsets');
+
+.offset {
+
+    // .offset-x
+    @for $i from 1 through $grid-divisions {
+        &-#{$i} {
+            @include make-offset($i);
+        }
     }
-}
-@each $size, $breakpoint in $breakpoints 
-{
-    @if $breakpoint > 0 
-    {
-        @media (min-width: map-get($breakpoints, $size))
-        {
-            @for $i from 1 through $grid-columns 
-            {
-                .offset-#{$size}-#{$i} {
-                    @include make-offset($i);
+
+    // Responsive offsets
+    @each $size, $breakpoint in $breakpoints {
+        @if $breakpoint > 0 {
+            @media (min-width: map-get($breakpoints, $size)) {
+                @for $i from 1 through $grid-divisions {
+                    &-#{$size}-#{$i} {
+                        @include make-offset($i);
+                    }
                 }
             }
         }
