--- a/src/Resources/sass/base/_reboot.scss
+++ b/src/Resources/sass/base/_reboot.scss
@@ -164,8 +164,9 @@ a {
 }
 
 a {
-    cursor: pointer !important;
-    text-decoration: none;
+    cursor: pointer;
+    text-decoration: underline;
+
     // background: red
 }
 
