--- a/src/Resources/sass/components/_badge.scss
+++ b/src/Resources/sass/components/_badge.scss
@@ -7,6 +7,7 @@
 @use './../abstracts/mixins/corner';
 @use './../abstracts/mixins/spaces';
 @use './../abstracts/mixins/banner';
+@use './../abstracts/mixins/pallet';
 @use './../abstracts/functions/color';
 
 @include banner.header('Component Badge');
@@ -15,15 +16,23 @@
 /// Badge variables
 /// =============================================
 
-// No variable
+// Default Values
+// --------------------------
+// -- No data
+
+
+// Default Theme
+// --------------------------
+// -- No data
+
 
 
 /// Badge component
 /// =============================================
 
-/// Badge component
-/// -------------------------
 .badge {
+    // --badge--font-size: 1em;
+    
     @include corner.rounded($spacer);
     display: inline-flex;
     justify-content: center;
@@ -35,10 +44,12 @@
 
 
     /// Badge sizes
-    /// -------------------------
+    /// --
+
     & {
         @include spaces.padding( $spacer * .4, $spacer * .6, $spacer * .4, $spacer * .6 );
-        font-size: $spacer * .8;
+        // font-size: $spacer * .8;
+        font-size: 0.75em;
         line-height: .8;
     }
     &-small {
@@ -54,16 +65,28 @@
 
 
     /// Badge Pallet
-    /// -------------------------
-    @each $_key, $_color in $pallet {
+    /// --
     
-        $_shade       : color.shade($_color, 30%);
-        $_tint        : color.tint($_color, 60%);
+    @each $key, $value in $pallet {
+    
+        $_shade       : color.shade($value, 30%);
+        $_tint        : color.tint($value, 60%);
         $_contrastText: color.contrastText($_shade);
     
-        &-#{$_key} {
-            background-color: var(--#{$_key});
-            border-color: var(--#{$_key});
+        // Fill color
+        // --
+
+        &-#{$key} {
+            background-color: var(--#{$key});
+            border-color: var(--#{$key});
+        }
+
+
+        // Stroke (outline) color
+        // --
+
+        &-#{$key}-outline {
+            @include pallet.outline($key);
         }
     }
 }
