--- a/src/Resources/templates/Breadcrumb/breadcrumb-item.html.twig
+++ b/src/Resources/templates/Breadcrumb/breadcrumb-item.html.twig
@@ -4,19 +4,13 @@
 {% set _attr = attr|default({}) %}
 {% set _attr = _add_attribute(_attr, 'class', class) %}
 
-{% if isDisabled == 1 %}
-{% set _attr = _add_attribute(_attr, 'disabled', true) %}
-{% set _attr = _add_attribute(_attr, 'aria-disabled', 'true') %}
-{% else %}
-{% set _attr = _add_attribute(_attr, 'href', href) %}
-{% set _attr = _add_attribute(_attr, 'target', target) %}
+{% if isActive %}
+{% set _attr = _add_attribute(_attr, 'aria-current', "page") %}
 {% endif %}
-
-{% for name, value in dataset %}
-{% set _attr = _add_attribute(_attr, 'data-'~ name, value) %}
-{% endfor %}
 
 
 {# -- Component Rendering --------------------------------------------------- #}
 {# -------------------------------------------------------------------------- #}
-<a {{ _get_attributes(_attr) }}>{{ label }}</a>
+<li {{ _get_attributes(_attr) }} {{ attributes }}>
+    <twig:Link :label="label" :url="url" :target="target" class="breadcrumb-item" noClassLink />
+</li>
